# nlp

./: .gitignore
week1/: README.md  agent.md  pyproject.toml
week1/src/cws_lab/: __init__.py  data.py  eval.py  mmseg.py  model.py  train.py
week2/: README.md  agent.md  pyproject.toml
week2/src/wordvec_lab/: __init__.py  data.py  glove.py  sgns.py  train_glove.py  train_sgns.py
week3/: README.md  agent.md  pyproject.toml
week3/src/seq_lab/: __init__.py  fasttext.py  seq2seq.py  tagging.py  utils.py
