[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-vector-learning"
version = "0.1.0"
description = "Skip-gram with negative sampling and GloVe on Chinese Wikipedia"
readme = "README.md"
authors = [{ name = "Hu Chengcheng" }]
requires-python = ">=3.12"
dependencies = [
  "torch>=2.1.0",
  "lightning>=2.2.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "regex>=2023.10.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
train-sgns = "wordvec_lab.train_sgns:main"
train-glove = "wordvec_lab.train_glove:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]